--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sweetalert2": "^11.11.1",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
